--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Air Quality Visualizer</name>
+	<name>Fire-alert-RMI</name>
 	<comment></comment>
 	<projects>
 	</projects>
